# security-tools

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_zh-TW.md  deploy_brain.cmd  deploy_brain.ps1  deploy_brain.sh  pyproject.toml  results.xml  test_out.txt  test_output.txt
.agent/rules/: engineering_guardrails.md  state_machine.md
.agent/workflows/: autopilot.md  bootstrap.md  handoff.md  implement.md  plan.md  review.md  ship.md  spec.md
.antigravity/: rules.md
.codex/: INSTALL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  integrity-check.yml
agentcortex/docs/: README.md  README_zh-TW.md
codex/rules/: default.rules
docs/context/: current_state.md
docs/context/archive/: codex-master-2026-03-06.md  codex-template-import-cleanup-namespacing-2026-03-06.md  codex-template-import-cleanup-namespacing-2026-03-07.md
docs/ghostcheck/: README.md  README_zh-TW.md
docs/specs/: ghostcheck-mvp.md  template-import-cleanup.md
src/ghostcheck/: cli.py  demo.py  ignorefile.py  scanner.py
src/ghostcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ghostcheck/checks/: agent_rules.py  ast_scanner.py  docker.py  hallucination.py  secrets.py
src/ghostcheck/data/: risky_rules.json  secret_patterns.json
tests/: template_import_cleanup_smoke.ps1  test_agent_rules.py  test_ast_sample.py  test_cli.py  test_demo.py  test_hallucination.py  test_secrets.py  test_security_guards.py
tools/: install-hooks.ps1  pre-commit  text_integrity_baseline.txt  validate.cmd  validate.ps1  validate.sh
(+5 files in other folders)
